ajout de la fonction capitales bas de casse

--- a/typotheque-prevert/user/themes/typotheque-prevert/blueprints/typographie.yaml
+++ b/typotheque-prevert/user/themes/typotheque-prevert/blueprints/typographie.yaml
@@ -23,6 +23,17 @@ form:
               type: text
               label: Date
 
+            header.custom.casses:
+              type: select
+              size: long
+              classes: fancy
+              label: Votre glyphset contient ?
+              default: glyphsetcomplet
+              options:
+                glyphsetcomplet: 'Tout'
+                glyphsetcapitales: 'Que les capitales'
+                glyphsetbasedecasse: 'Que les bas-de-casses'
+
             header.custom.archivezip:
               type: file
               label: Archive ZIP/RAR du fichier font
