ajout des illustrations ascii dans l'admin

--- a/typotheque-prevert/user/themes/typotheque-prevert/blueprints/typographie.yaml
+++ b/typotheque-prevert/user/themes/typotheque-prevert/blueprints/typographie.yaml
@@ -23,6 +23,10 @@ form:
               type: text
               label: Date
 
+            header.custom.phrasepoetique:
+              type: text
+              label: Phrase Poétique
+
             header.custom.casses:
               type: select
               size: long
