--- a/typotheque-prevert/user/themes/typotheque-prevert/blueprints/typotheque.yaml
+++ b/typotheque-prevert/user/themes/typotheque-prevert/blueprints/typotheque.yaml
@@ -15,6 +15,11 @@ form:
 
           fields:
 
-            header.custom.nbstyles:
-              type: text
-              label: Nombres de styles
+            header.custom.asciiart:
+              type: list
+              style: vertical
+              label: Ascii Art
+              fields:
+                .ascii:
+                  type: editor
+                  label: Text
