--- a/typotheque-prevert/user/themes/typotheque-prevert/blueprints.yaml
+++ b/typotheque-prevert/user/themes/typotheque-prevert/blueprints.yaml
@@ -6,7 +6,7 @@ description: Thème de la typothèque du DNMADE du Lycée Jacques Prévert
 icon: rebel
 author:
   name: Eleves
-  email: ahah@hoho.fr
+  email: contact@louiseroo.fr
 homepage: https://github.com/eleves/grav-theme-typotheque-prevert
 demo: http://demo.yoursite.com
 keywords: grav, theme, etc
